fix gaps

--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -18,7 +18,8 @@
 	}
 
 	.section1 {
-		padding-bottom: 120px;
+		padding-top: 102px;
+		padding-bottom: 174px;
 
 		&__title,
 		.section1__title>span {
@@ -56,7 +57,7 @@
 	}
 
 	.section3 {
-		padding-bottom: 157px;
+		padding-bottom: 110px;
 
 		&__title {
 			margin-bottom: 27px;
@@ -76,7 +77,7 @@
 	}
 
 	.section4 {
-		padding-bottom: 120px;
+		padding-bottom: 76px;
 
 		&__title {
 			margin-bottom: 27px;
@@ -87,7 +88,7 @@
 		margin-bottom: 120px;
 
 		&__title {
-			margin-bottom: 27px;
+			margin-bottom: 81px;
 		}
 	}
 
